fix: changed sandbox to work better on mobile

--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -39,7 +39,7 @@ a.dec-less:hover {
     color: red;
 }
 .sandbox-wrap{
-    width: 954px;
+    width: 100%;
 
 }
 /* custom style  */
